= 0.9.4

* Added an offset method to the DSL so that we can do offsets separately from
limits

* Some small performance improvements

* Added a test to make sure that the IN restriction can take a range

* Changed the default rake task to run db:spec:prepare first

* Added metric_fu for code quality metrics tests

* Refactored a bunch of code to improve the metric numbers

= 0.9.3

* Fix a bug when using class_name on belongs_to associations without
foreign_key

= 0.9.2

* Ruby 1.9 compatability

= 0.9.1

* Change group_by so that it will not throw an exception for missing column
names, since we want to be able to group by arbitrary things.

= 0.9.0 

* Added a github pages page with a quick intro.

* Add tests for working with default scopes.

* de-hackify the default aliases for explicit joins.

* Fix a bug where strings wouldn't work as the names of associations in
implicit joins.

* Improve the README

* Fix a bug when combining joins across multiple named filters that introduce
the same join.

= 0.8.0

* Raise an exception when calling order with something that isn't :asc or
:desc

* Use hanna for spiffy rdocs.

* Raise an exception when attempting to add a named filter to a class if there
is already an existing filter with the same name.

* Documentation. 

* Refactored the custom DSL subclass creation code into a DSLFactory class.

* Added a (fairly simple) performance test.

* Get source_type option working for has_many.

* Correct hard-coded primary key columns.

= 0.6.0

* 100% test coverage. That's right, 100%.

* Added fixes for various options on AR associations.

* Support calling named filters from within joins in filters.

* Stop using _inheritable_attribute for accessing the named filters and just recurse for
them.

* Change the tests for named filters to use anonymous classes so that we're
sure we're starting from a blank slate.

* Make the API work correctly for anonymous classes.
